--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://gitlab.com/vbykovsky/language-academy#readme",
   "dependencies": {
+    "@ant-design/icons": "4.7.0",
     "@babel/cli": "7.17.0",
     "@babel/core": "7.17.2",
     "@babel/preset-env": "7.16.11",
@@ -44,10 +45,12 @@
     "@types/styled-components": "5.1.22",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
+    "antd": "4.18.9",
     "babel-loader": "8.2.3",
     "babel-plugin-styled-components": "2.0.2",
     "circular-dependency-plugin": "5.2.2",
     "clean-webpack-plugin": "4.0.0",
+    "css-loader": "6.7.0",
     "dotenv": "16.0.0",
     "eslint": "8.8.0",
     "eslint-config-google": "0.14.0",
@@ -55,7 +58,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^7.0.4",
+    "husky": "7.0.4",
     "i18next": "21.6.11",
     "i18next-resources-to-backend": "1.0.0",
     "lint-staged": "12.3.3",
@@ -63,6 +66,7 @@
     "react-dom": "17.0.2",
     "react-i18next": "11.15.4",
     "react-router-dom": "6.2.1",
+    "style-loader": "3.3.1",
     "styled-components": "5.3.3",
     "terser-webpack-plugin": "5.3.1",
     "typescript": "4.5.5",
