--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,16 +48,16 @@
     "paths": {
       "@ts": ["./ts/index"],
       "@ts/*": ["./ts/*"],
-      "@client/*": ["./client/src/*"],
-      "@common/*": ["./client/src/common/*"],
       "@localization/*": ["./client/src/common/localization/*"],
       "@localization": ["./client/src/common/localization/index"],
+      "@common/*": ["./client/src/common/*"],
       "@components": ["./client/src/components/index"],
       "@components/*": ["./client/src/components/*"],
       "@containers": ["./client/src/containers/index"],
       "@containers/*": ["./client/src/containers/*"],
       "@icons": ["./client/src/icons/index"],
-      "@icons/*": ["./client/src/icons/*"]
+      "@icons/*": ["./client/src/icons/*"],
+      "@client/*": ["./client/src/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
