--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
+    "@reduxjs/toolkit": "1.8.0",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
+    "@types/react-redux": "7.1.23",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.22",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "antd": "4.18.9",
+    "axios": "0.26.0",
     "babel-loader": "8.2.3",
     "babel-plugin-styled-components": "2.0.2",
     "circular-dependency-plugin": "5.2.2",
@@ -58,6 +61,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "html-webpack-plugin": "5.5.0",
+    "http-status-codes": "2.2.0",
     "husky": "7.0.4",
     "i18next": "21.6.11",
     "i18next-resources-to-backend": "1.0.0",
@@ -65,6 +69,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "11.15.4",
+    "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "style-loader": "3.3.1",
     "styled-components": "5.3.3",
