--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@ant-design/icons": "4.7.0",
     "@babel/cli": "7.17.0",
     "@babel/core": "7.17.2",
+    "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
+    "@babel/runtime": "7.17.8",
     "@reduxjs/toolkit": "1.8.0",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
@@ -49,6 +51,7 @@
     "@typescript-eslint/parser": "5.11.0",
     "antd": "4.18.9",
     "axios": "0.26.0",
+    "axios-mock-adapter": "1.20.0",
     "babel-loader": "8.2.3",
     "babel-plugin-styled-components": "2.0.2",
     "circular-dependency-plugin": "5.2.2",
