--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "husky:install": "husky install",
     "client:dev": "npx webpack serve --env development",
     "client:build": "webpack --env production",
-    "lint": "eslint --ext .ts,.tsx,.js ./ --fix --max-warnings 0"
+    "lint": "eslint --ext .ts,.tsx,.js,.json ./ --fix --max-warnings 0",
+    "check-types": "npx tsc -p tsconfig.json --noEmit"
   },
   "repository": {
     "type": "git",
@@ -41,16 +42,16 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.8",
-    "@reduxjs/toolkit": "1.8.0",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "17.0.11",
+    "@reduxjs/toolkit": "1.8.1",
+    "@types/react": "18.0.4",
+    "@types/react-dom": "18.0.0",
     "@types/react-redux": "7.1.23",
     "@types/react-router-dom": "5.3.3",
-    "@types/styled-components": "5.1.22",
+    "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
-    "antd": "4.18.9",
-    "axios": "0.26.0",
+    "antd": "4.19.5",
+    "axios": "0.26.1",
     "axios-mock-adapter": "1.20.0",
     "babel-loader": "8.2.3",
     "babel-plugin-styled-components": "2.0.2",
@@ -61,21 +62,23 @@
     "eslint": "8.8.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.4.0",
     "html-webpack-plugin": "5.5.0",
     "http-status-codes": "2.2.0",
     "husky": "7.0.4",
-    "i18next": "21.6.11",
+    "i18next": "21.6.16",
     "i18next-resources-to-backend": "1.0.0",
     "lint-staged": "12.3.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-i18next": "11.15.4",
-    "react-redux": "7.2.6",
-    "react-router-dom": "6.2.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-i18next": "11.16.6",
+    "react-redux": "7.2.8",
+    "react-router-dom": "6.3.0",
     "style-loader": "3.3.1",
-    "styled-components": "5.3.3",
+    "styled-components": "5.3.5",
     "terser-webpack-plugin": "5.3.1",
     "typescript": "4.5.5",
     "webpack": "5.68.0",
