--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.8",
+    "@ladjs/country-language": "0.2.1",
     "@reduxjs/toolkit": "1.8.1",
     "@types/react": "18.0.4",
     "@types/react-dom": "18.0.0",
