--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "@babel/runtime": "7.17.8",
     "@ladjs/country-language": "0.2.1",
     "@reduxjs/toolkit": "1.8.1",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@types/react-input-mask": "3.0.1",
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "antd": "4.21.3",
+    "antd-mask-input": "2.0.7",
     "axios": "0.26.1",
     "axios-mock-adapter": "1.20.0",
     "babel-loader": "8.2.3",
@@ -56,9 +58,11 @@
     "i18next": "21.6.16",
     "i18next-resources-to-backend": "1.0.0",
     "lint-staged": "12.3.3",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "11.16.6",
+    "react-input-mask": "2.0.4",
     "react-is": "18.1.0",
     "react-redux": "8.0.1",
     "react-router-dom": "6.3.0",
