--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "concurrently": "7.4.0",
     "dotenv": "16.0.2",
+    "dotenv-cli": "6.0.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3"
   }
