--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "@types/react-input-mask": "3.0.1",
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
-    "@types/sanitize-html": "^2.6.2",
+    "@types/sanitize-html": "2.6.2",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
@@ -61,7 +61,7 @@
     "react-is": "18.1.0",
     "react-redux": "8.0.1",
     "react-router-dom": "6.3.0",
-    "sanitize-html": "^2.7.1",
+    "sanitize-html": "2.7.1",
     "style-loader": "3.3.1",
     "styled-components": "5.3.5",
     "terser-webpack-plugin": "5.3.1",
