LANG-00000: АПИ Курсов

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ statistics=true
 
 filename=*.py
 exclude=__pycache__,migrations,manage.py
-ignore=D100,D101,D102,D104,D105,D106,N802,N803,N806,N815,N816,W504
+ignore=D100,D101,D102,D104,D105,D106,N802,N803,N806,N815,N816,S105,W503,W504,WPS226,WPS407,WPS432,WPS347,WPS115,WPS306,WPS602,WPS221,WPS465,WPS510,WPS305,WPS229,WPS232,WPS231,WPS210,WPS337,WPS319,WPS214,WPS605,WPS125,WPS212,WPS400
