--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
     "@types/sanitize-html": "2.6.2",
-    "@types/styled-components": "5.1.25",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "antd": "4.21.3",
@@ -63,9 +63,10 @@
     "react-router-dom": "6.3.0",
     "sanitize-html": "2.7.1",
     "style-loader": "3.3.1",
-    "styled-components": "5.3.5",
+    "styled-components": "^5.3.5",
     "terser-webpack-plugin": "5.3.1",
     "typescript": "4.5.5",
+    "use-debounce": "8.0.4",
     "webpack": "5.68.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
